--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  background-image: url("../src/Assets/background.png");
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
