--- a/src/Components/LandingPage/landPage.css
+++ b/src/Components/LandingPage/landPage.css
@@ -1,9 +1,11 @@
 .myColor {
   color: #4ffcb3;
+  font-size: 28px;
+  font-weight: bold;
 }
+
 .myBabberImage {
   width: 780px;
-  height: 300px;
 }
 .myColorSimple {
   color: white;
@@ -19,7 +21,7 @@
 }
 @media (min-width: 300px) and (max-width: 600px) {
   .myBabberImage {
-    width: 250px;
+    width: 100%;
   }
   .myColorSimpleBlue {
     color: #4ffcb3;
@@ -32,5 +34,11 @@
     font-size: 14px;
     text-align: center;
     font-weight: 400;
+  }
+  .myColor {
+    color: #4ffcb3;
+    font-size: 20px;
+    font-weight: bolder;
+    text-align: center;
   }
 }
