--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -9,4 +9,13 @@
   background-image: url("../../Assets/background.png");
   width: 100%;
   background-size: contain;
+  background-repeat: no-repeat;
 }
+/* @media (min-width: 300px) and (max-width: 600px) {
+  .backGround {
+    background-image: url("../../Assets/background.png");
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+  }
+} */
