--- a/src/Components/NFTCarousel/Carousel.css
+++ b/src/Components/NFTCarousel/Carousel.css
@@ -1,10 +1,18 @@
 .sliderContainer {
   overflow: hidden;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   background-image: url("../../Assets/background.png");
   width: 100%;
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
+}
+.staking {
+  background-image: url("../../Assets/background.png");
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #0f131b;
 }
 .cardImage {
   margin-left: 20px;
@@ -12,4 +20,21 @@
 .card-img-top {
   border-radius: 10px;
   border: 3px solid #fff;
+}
+.nft-images {
+  width: 250px;
+  height: 250px;
+}
+.btnOpenSea {
+  width: 300px;
+  height: 70px;
+  font-weight: 800;
+  font-size: 20px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: #fff;
+  background: #28aa73;
+  border: 1px solid #28aa73;
 }
