--- a/src/Components/FAQ/FAQ.css
+++ b/src/Components/FAQ/FAQ.css
@@ -5,153 +5,68 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
-.mintText {
-  font-size: 50px;
-  line-height: 100%;
-  color: #4ffcb3;
-}
-
-li {
-  list-style-type: none;
-  position: relative;
-  padding-left: 15px;
-  font-size: 15px;
-  color: #fff;
-  padding-top: 20px;
-  /* top: 5px; */
-}
-
-li:before {
-  content: url("../../Assets//images/Frame 6.png");
-  position: absolute;
-  left: -10px;
-}
-
-.mintCardBody,
-.mintCard2 {
-  background: #051f28;
-}
-.mintCard {
-  max-width: 480px;
-  border-radius: 10px;
-}
-.mintCard2 {
-  width: 480px;
-  border-radius: 10px;
-}
-.mintImage {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  width: 480px;
-}
-.mintCardBody {
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-@media (max-width: 575.98px) {
-  .mintImage,
-  .mintCard,
-  .mintCard2 {
-    width: 300px;
-  }
-}
-@media (max-width: 320px) {
-  .mintAdditionSection {
-    width: 270px;
-  }
-}
-@media (min-width: 576px) {
-  .mintImage,
-  .mintCard,
-  .mintCard2 {
-    width: 480px;
-  }
-}
-.mintCard2Header {
-  color: #fff;
-  background: #608a97;
-  border-radius: 10px 10px 0px 0px;
-}
-.mintHeaderh3 {
-  font-size: 24px;
-  font-weight: 700;
-}
-.mintCard2SubHeader {
-  background: #405c65;
-  color: #fff;
-}
-.spanBalance {
-  color: #4ffcb3;
-}
-.mintAdditionSection,
-.mintTotal {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.mintAdditionSection {
+  padding: 20px;
   background-color: #000;
-  border-radius: 5px;
-  border: 1px solid #000;
-  height: 50px;
 }
-.btnMinus,
-.btnPlus,
-.spanCount,
-.btnMax {
-  background: transparent;
-  border: none;
-  padding: 5px 10px;
-}
-.btnMinus,
-.btnPlus,
-.spanCount {
-  font-size: 20px;
-  width: 3px;
+.FAQTitle {
+  font-weight: 400;
+  font-size: 50px;
   color: #fff;
 }
-.btnMax {
-  font-size: 15px;
-  color: #767c88;
-}
-.divider,
-.hori {
-  margin: 20px 0px;
-  border-top: 2px solid #405c65;
-}
-
-.totalSpan,
-.KLAYspan {
-  color: #fff;
-}
-.btnWalletStakeArea {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.btnConnectWallet,
-.btnMint {
-  color: #fff;
-  width: 290px;
-  margin: 5px;
-  padding: 5px 20px;
+.QandA {
+  font-size: 30px;
   font-weight: 800;
-  font-size: 24px;
+  margin: 0px 10px;
+}
+.accordion-item:first-of-type .accordion-button,
+.accordion-item:last-of-type .accordion-button {
+  border-top-left-radius: 20px !important;
+  border-top-right-radius: 20px !important;
+  background-color: #000 !important;
+  /* border: 1px solid #ffffff !important; */
+}
+.accordion-item:first-of-type .accordion-button.collapsed,
+.accordion-item:last-of-type .accordion-button.collapsed {
+  border-radius: 20px !important;
+  border-top-left-radius: 20px !important;
+  border-top-right-radius: 20px !important;
+  color: #28aa73;
+  /* border: 1px solid #ffffff !important; */
 }
 
-.btnConnectWallet {
-  background: #28aa73;
-  border: 1px solid #28aa73;
-  border-radius: 10px;
+.accordion-item,
+.accordion-header {
+  background: #000 !important;
+  color: #fff;
+  margin-top: 20px;
 }
-.btnMint {
-  background: #3bc2cb;
-  border: 1px solid #3bc2cb;
-  border-radius: 10px;
+.accordion-button {
+  color: #fff !important;
+  background: #000 !important;
+  /* border: 1px solid #ffffff !important; */
+  box-sizing: border-box;
+  border-radius: 20px;
+  border: 1px solid #ffffff;
+  box-shadow: none !important;
+  fill: #fff;
 }
-.mintHeaderSpan {
-  font-size: 14px;
+
+.accordion-button:not(.collapsed) {
+  border-radius: 20px 20px 0px 0px;
+  border: 1px solid #fff;
+  border-bottom: black;
+  color: #28aa73;
+  background: #000 !important;
+}
+.accordion-collapse {
+  border-radius: 0px 0px 20px 20px;
+  /* border: 1px solid #ffffff !important; */
+}
+.accordianCardBody {
+  background-color: #000;
+  color: #fff;
+  border-radius: 0px 0px 20px 20px;
+  border: 1px solid #fff;
+  border-top: #000;
+  padding: 10px 20px;
 }
