--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,21 +1,48 @@
-.myNavItemstxt {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 100%;
+.navbarMainContainer {
+  background: transparent;
+  position: absolute;
+  z-index: 999;
 }
-.backGround {
-  background-image: url("../../Assets/background.png");
-  width: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
+.navbar {
+  padding-top: 0px !important;
 }
-/* @media (min-width: 300px) and (max-width: 600px) {
-  .backGround {
-    background-image: url("../../Assets/background.png");
-    width: 100%;
-    height: 100vh;
+.nav-link {
+  color: #fff !important;
+  padding: 0px 10px !important;
+}
+.nav-item-list li {
+  margin: 10px;
+}
+@media (max-width: 991.98px) {
+  .navbar-nav {
+    background-image: url("../../Assets/background.png") !important;
+    background-size: cover;
     background-repeat: no-repeat;
+    width: 50% !important;
+    float: left !important;
   }
-} */
+}
+.navbarSocialLinks {
+  background-color: #fff;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #fff;
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 5px;
+}
+.navbarSocialImages {
+  background-size: contain;
+  width: 13px;
+}
+.mobileNabarSocial {
+  display: flex;
+}
+@media (max-width: 991.98px) {
+  .mobileNabarSocial {
+    display: none !important;
+  }
+}
