presale page complete

--- a/src/Components/Presales/Presales.css
+++ b/src/Components/Presales/Presales.css
@@ -123,11 +123,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  --bs-gutter-x: 0px !important;
 }
 .preslaesAdditionSection {
-  background-color: #000;
+  background: #000000;
+  border: 1px solid #405c65;
   border-radius: 5px;
-  border: 1px solid #000;
   height: 50px;
 }
 @media (max-width: 320px) {
@@ -189,4 +190,68 @@
 .presaleCardBody {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+.navTabs {
+  width: 33.33%;
+  height: 50px;
+  background: #405c65 !important;
+  border: 1px solid #28aa73;
+}
+.navTabs .nav-link {
+  color: #7d9ea9;
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
+  border: 1px solid #28aa73;
+}
+.nav-tabs .nav-link {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border: 1px solid #28aa73;
+}
+.tabText {
+  color: #000;
+  font-size: 20px;
+}
+.nav-tabs .nav-link.active {
+  background: #2adeea !important;
+  border: 1px solid #28aa73;
+}
+.tab1 {
+  border-top-left-radius: 10px !important;
+}
+.tab3 {
+  border-top-right-radius: 10px !important;
+}
+.preSaleCardBody {
+  padding: 0px 20px;
+}
+.progress {
+  background: #405c65;
+}
+.progress-bar {
+  background: #4ffcb3;
+  border-radius: 5px;
+  color: #000;
+}
+.progressValue {
+  display: flex;
+  justify-content: space-between;
+  color: #fff;
+  margin-top: 10px;
+}
+.btnMinusPresale {
+  padding: 0px 15px;
+  font-size: 30px;
+}
+.btnPlusPresale {
+  padding: 0px 30px !important;
+  font-size: 30px;
+}
+.btnMint {
+  background: #28aa73;
+  border: 1px solid #28aa73;
+  border-radius: 10px;
+}
+.textColor {
+  color: #4ffcb3;
 }
