--- a/src/Components/Presales/Presales.css
+++ b/src/Components/Presales/Presales.css
@@ -255,3 +255,18 @@
 .textColor {
   color: #4ffcb3;
 }
+.connectBtnInPresale {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.btnConnectInPresale {
+  width: 200px;
+  height: 40px;
+  font-weight: 800;
+  font-size: 20px;
+  border-radius: 10px;
+  color: #fff;
+  background: #28aa73;
+  border: 1px solid #28aa73;
+}
