--- a/src/Components/Roadmap/Roadmap.css
+++ b/src/Components/Roadmap/Roadmap.css
@@ -217,6 +217,6 @@
 .lightCard {
   border-style: solid;
   border-width: 2px;
-  border-image: linear-gradient(180deg, #4ffcb3 0%, #4fb3fc 100%) 1;
+  /* border-image: linear-gradient(180deg, #4ffcb3 0%, #4fb3fc 100%) 1; */
   border-radius: 30px !important;
 }
