--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -2,20 +2,21 @@
   background: transparent;
   position: absolute;
   z-index: 999;
+  background: rgba(24, 26, 43, 0.6);
 }
 .navbar {
   padding-top: 0px !important;
 }
 .nav-link {
   color: #fff !important;
-  padding: 0px 10px !important;
+  padding: 0px 7px !important;
 }
 .nav-item-list li {
   margin: 10px;
 }
 @media (max-width: 991.98px) {
   .navbar-nav {
-    background-image: url("../../Assets/background.png") !important;
+    /* background-image: url("../../Assets/background.png") !important; */
     background-size: cover;
     background-repeat: no-repeat;
     width: 50% !important;
@@ -45,4 +46,23 @@
   .mobileNabarSocial {
     display: none !important;
   }
+}
+.navbarContainer {
+  margin-right: 10px !important;
+}
+@media (max-width: 767.98px) {
+  .navbarContainer {
+    margin-right: auto !important;
+  }
+}
+.languageChnage {
+  color: #fff;
+  padding-right: 15px;
+}
+.navLink,
+.languageChnage {
+  cursor: pointer;
+}
+.languageChnage .active {
+  border-bottom: 2px solid #fff;
 }
