--- a/src/Components/Presales/Presales.css
+++ b/src/Components/Presales/Presales.css
@@ -247,10 +247,13 @@
   padding: 0px 30px !important;
   font-size: 30px;
 }
-.btnMint {
+.btnMintPresale {
   background: #28aa73;
   border: 1px solid #28aa73;
   border-radius: 10px;
+  width: 200px;
+  height: 50px;
+  color: #fff;
 }
 .textColor {
   color: #4ffcb3;
