--- a/src/Components/Story/Story.css
+++ b/src/Components/Story/Story.css
@@ -22,6 +22,8 @@
   box-shadow: 0px 4px 20px #e4e4a8;
   border-radius: 0px 30px 30px 30px;
   border: none;
+  width: 260px !important;
+  height: 260px !important;
 }
 .storyImg2Container {
   position: relative;
