--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
 }
 .teamTitle {
   font-size: 50px;
@@ -21,16 +21,16 @@
   font-weight: 800;
 }
 .teamCard {
-  /* width: 260px;
-  height: 260px; */
-  margin: 0px 10px;
+  width: 220px;
+  height: 220px;
+  /* margin: 0px 10px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
 }
 .cardSubTitle {
-  font-size: 24px;
+  font-size: 20px;
   color: #4ffcb3;
   display: flex;
   justify-content: center;
@@ -38,14 +38,13 @@
 }
 .cardTitle {
   font-weight: 800;
-  font-size: 28px;
+  font-size: 24px;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .teamCardImage {
-  /* width: 260px;
-  height: 260px; */
-  margin: 0px 10px;
+  width: 200px;
+  height: 200px;
 }
