--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -3,6 +3,7 @@
   position: absolute;
   z-index: 999;
   background: rgba(24, 26, 43, 0.6);
+  overflow: hidden;
 }
 .navbar {
   padding-top: 0px !important;
@@ -41,15 +42,36 @@
 }
 .mobileNabarSocial {
   display: flex;
+  padding-right: 7.5%;
+}
+@media (min-width: 2600px) and (max-width: 2650px) {
+  .mobileNabarSocial {
+    padding-right: 26%;
+  }
+}
+@media (min-width: 2500px) and (max-width: 2599px) {
+  .mobileNabarSocial {
+    padding-right: 25%;
+  }
+}
+@media (min-width: 2400px) and (max-width: 2499px) {
+  .mobileNabarSocial {
+    padding-right: 24%;
+  }
+}
+@media (min-width: 2300px) and (max-width: 2399px) {
+  .mobileNabarSocial {
+    padding-right: 23%;
+  }
 }
 @media (max-width: 991.98px) {
   .mobileNabarSocial {
     display: none !important;
   }
 }
-.navbarContainer {
+/* .navbarContainer {
   margin-right: 10px !important;
-}
+} */
 @media (max-width: 767.98px) {
   .navbarContainer {
     margin-right: auto !important;
