--- a/src/Components/FAQ/FAQ.css
+++ b/src/Components/FAQ/FAQ.css
@@ -9,8 +9,10 @@
   background-color: #000;
 }
 .FAQTitle {
-  font-weight: 400;
+  font-family: "Bowlby One";
+  font-weight: 800;
   font-size: 50px;
+  font-style: normal;
   color: #fff;
 }
 .QandA {
@@ -30,7 +32,7 @@
   border-radius: 20px !important;
   border-top-left-radius: 20px !important;
   border-top-right-radius: 20px !important;
-  color: #28aa73;
+  /* color: #28aa73; */
   /* border: 1px solid #ffffff !important; */
 }
 
@@ -41,7 +43,7 @@
   margin-top: 20px;
 }
 .accordion-button {
-  color: #fff !important;
+  color: #fff;
   background: #000 !important;
   /* border: 1px solid #ffffff !important; */
   box-sizing: border-box;
@@ -69,6 +71,12 @@
   border: 1px solid #fff;
   border-top: #000;
   padding: 10px 20px;
+  display: flex;
+  flex-direction: row;
+  color: #28aa73;
+}
+.accordion-button .collapse {
+  color: #28aa73;
 }
 .FAQaccordion {
   width: 750px;
