--- a/src/Components/StoryCarousel/Carousel.css
+++ b/src/Components/StoryCarousel/Carousel.css
@@ -15,7 +15,11 @@
     width: 100% !important;
   }
 }
-.carouselHeading,
+.carouselHeading {
+  color: #fff;
+  font-style: italic;
+}
+
 .carouselPara {
   color: #fff;
   display: flex;
@@ -28,9 +32,9 @@
 .carouselDescripton {
   width: 800px;
   display: flex;
-  justify-content: center;
+  /* justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: row; */
   padding-top: 30px;
 }
 @media (max-width: 768px) {
