--- a/src/Components/Tokenomics/Tokenomics.css
+++ b/src/Components/Tokenomics/Tokenomics.css
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   flex-direction: column;
   overflow: hidden;
+  font-style: normal;
 }
 .tokenNomicsTitle {
   color: #fff;
@@ -60,7 +61,7 @@
 }
 .tokenCardPara {
   font-weight: 600;
-  font-size: 20px;
+  font-size: 22px;
   line-height: 100%;
   color: #ffffff;
 }
@@ -83,7 +84,7 @@
   width: 40px;
   height: 40px;
   z-index: 999;
-  font-size: 17px;
+  font-size: 13px;
   display: flex;
   top: 70%;
   justify-content: center;
